--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://in.linkedin.com/in/prasanna-ashwath" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
-      </div> 
+      </div>  
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
@@ -80,7 +80,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>An accomplishment-driven professional with an experience of nearly 16 years in the
+            IT Industry; hands-on experience in performing techno-functional roles in complex and large setups as well as in managing & supporting clients in IT, Consulting, Real Estate and Financial DomainRich experience in coordinating Storage, Unix, and Backup operations across numerous sites coordinating business operations, technical delivery, personnel, and operational overview.</p>
         </div>
 
         <div class="row">
