--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 class="text-light"><a href="index.html">Prasanna Ashwath</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://instagram.com/prasannaashwath?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://in.linkedin.com/in/prasanna-ashwath" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
