--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Prasanna Ashwath</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/profile.php?id=1195613929&mibextid=D4KYlr" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="https://instagram.com/prasannaashwath?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="#" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>
           <a href="https://in.linkedin.com/in/prasanna-ashwath" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>  
