--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 June</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Prasannaashwath.space</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 998 601 8684</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bengaluru, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
