--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>39</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma in Electronics & Communications</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>prasanna.ashwath@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>prasanna.ashwath@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
