--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Technology Manager &amp; Storage/Unix/Backup Administrator.</h3>
+            <h3>Leader in IT Ops & Client Support &amp; Techno-Functional Expert.</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Developed and exhibited technical subject matter expertise on the assigned backup and storage systems along with associated processes and procedures; performed change management and incident management for backup and archiving infrastructure.
             </p>
             <div class="row">
               <div class="col-lg-6">
