--- a/index.html
+++ b/index.html
@@ -219,28 +219,27 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Scaling heights of success by leaving marks of excellence; targeting senior level assignments in the IT with an organization of high repute for mutual growth; preferably in Bengaluru.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Prasanna Ashwath</h4>
+              <p><em>An accomplishment-driven professional with an experience of nearly 16 years in the IT Industry; hands-on experience in performing techno-functional roles in complex and large setups as well as in managing & supporting clients in IT, Consulting, Real Estate and Financial Domain.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Bengaluru,India</li>
+                <li>+91 998 601 8684</li>
+                <li>prasanna.ashwath@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Diploma in Electronics &amp; Communications</h4>
+              <h5>2003 - 2005</h5>
+              <p><em>H.M.S Polytechnic, Tumkur, Karnataka</em></p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
@@ -252,14 +251,14 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Associate Manager - Cloud & Datacenter</h4>
+              <h5>2012 - Present</h5>
+              <p><em>Microland Limited, Bengaluru, IN </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Supervising maintenance, installation, and updates of data center systems; recording the installations, upgrades, and maintenance of systems or software; creating and updating disaster recovery plans for all critical systems and data in case of an emergency</li>
+                <li>Presenting new tools that could be used to improve efficiency or cutting costs; ensuring a safe and secure facility to protect the systems and power configuration; configuring, managing, and analyzing automated system utilized in the organization. </li>
+                <li>Reviewing data center operations to identify potential areas of improvement or inefficiency in order to improve efficiency or reduce costs</li>
+                <li>Leading complex Data Center and Cloud infrastructure (network, storage and compute) design/implementation and migration, performance engineering or problem resolution projects</li>
               </ul>
             </div>
             <div class="resume-item">
