--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Sr. Backup Administrator</h4>
+              <h5>2011 - 2012</h5>
+              <p><em>Goldstone Technologies Limited, Bengaluru, IN</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
@@ -341,12 +341,12 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  I am so proud to have been a part of the Microland team along with Prasanna, and I have to say that a big part of that experience has been working alongside Prasanna A. Prasanna is not only a friendly and joyful team member, but he is also an invaluable asset to our company. His positive attitude and willingness to help out in any way possible make him a pleasure to work with. I have no doubt that he will continue to excel in his role and be a valuable member of the team for many more years to come.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Sarvesh Huddedar</h3>
+                <h4>Sr. Manager - Delivery</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -354,12 +354,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Having worked Prasanna for over seven years (directly reporting to him), I can confidently attest to his diligent work ethic and remarkable problem-solving skills. His capacity to address complex issues, work collaboratively with various teams, and complete projects within deadlines has truly impressed me. Such abilities typically require extensive experience to hone, but Prasanna appeared to possess them naturally. He effortlessly adapts to any environment or business context. Nevertheless, what sets him apart is his eagerness to support others. I am honored to have worked with him and wholeheartedly recommend him to potential employers. Prasanna would undoubtedly be a valuable addition to any team.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Libin K G</h3>
+                <h4>Senior Subject Matter Expert - Unix & Linux</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -367,12 +367,20 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Working with Prasanna has been an absolute learning ride in:
+Technical aspects related to operations
+Upskilling
+Client & Stakeholder management
+Maintaining consistent customer satisfaction
+Handling operational risks, maintaining compliance, applying governance 
+Team building, service transitions, service delivery 
+He is an excellent team player who is always pushing self & others to bring the best outcome. 
+Never thinks to downplay, always identifies a best out of team member and provides right oppurtunities & platform to showcase skills.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Vishal M</h3>
+                <h4>Cyber Security | Security Operations | VMS | GRC | Information Security</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -380,12 +388,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Had absolute pleasure working with Prasanna in Operations Team. He's very subject oriented and knows what he does. He's very approachable and helpful. We use to work on a X Backup Tool and due to client request, we moved to a new Y Backup Tool. It a very short period of time he learnt Y Backup Tool and had mastered it and gave the knowledge transfer and move the environment to production. He's fast learner and an amazing asset to any organization.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Vignesh Dhakshina</h3>
+                <h4>Solution Architect helping industries on transforming their IT Platform | ServiceNow - Strategy, Sales, & Solution Consultant | Scrum Master | Product Owner | ITIL v4 | Agile</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -393,12 +401,12 @@
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  I’ve had the privilege of working with Prasanna Ashwath for little over 3 years during his tenure in Accenture. We both were part of Backup/storage/UNIX team and I had indirectly managed him. In that time, I have known Prasanna to be a quick learner and a great asset to the team. His analytical and problem solving skills has helped the team solve complex backup issues in the environment and always deliver projects on time. His knowledge and experience with backup tools is definitely an asset to any organization.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Sesha (Seshasayee Venkataramani) Venkataramani</h3>
+                <h4>Vice President at Goldman Sachs</h4>
               </div>
             </div><!-- End testimonial item -->
 
