--- a/index.html
+++ b/index.html
@@ -266,10 +266,9 @@
               <h5>2011 - 2012</h5>
               <p><em>Goldstone Technologies Limited, Bengaluru, IN</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Ownership and management of NetBackup and Avamar backup infrastructure including installing NetBackup 6.5, troubleshooting Tape Library issues (Quantum i2000/6000/P720) and Robotic Devices (TLD).</li>
+                <li>Configuring and managing the Avamar backups on Linux, Solaris, Windows and NDMP clients</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
               </ul>
             </div>
           </div>
@@ -278,13 +277,12 @@
       </div>
     </section><!-- End Resume Section -->
     <!-- ======= Certification Section ======= -->
-    <section id="facts" class="facts">
+    <section id="Certification" class="Certification">
       <div class="container">
 
         <div class="section-title">
           <h2>Certification</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          </div>
 
         <div class="row no-gutters">
 
