--- a/index.html
+++ b/index.html
@@ -234,20 +234,17 @@
                 <li>prasanna.ashwath@gmail.com</li>
               </ul>
             </div>
-
+          </div class="column">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Diploma in Electronics &amp; Communications</h4>
               <h5>2003 - 2005</h5>
               <p><em>H.M.S Polytechnic, Tumkur, Karnataka</em></p>
             </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-            </div>
           </div>
+        </div>
+          <div class="row">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
@@ -261,6 +258,7 @@
                 <li>Leading complex Data Center and Cloud infrastructure (network, storage and compute) design/implementation and migration, performance engineering or problem resolution projects</li>
               </ul>
             </div>
+
             <div class="resume-item">
               <h4>Sr. Backup Administrator</h4>
               <h5>2011 - 2012</h5>
@@ -271,8 +269,41 @@
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
               </ul>
             </div>
+          </div class="column">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Sr. Administrator - Backup</h4>
+              <h5>2010 - 2011</h5>
+              <p><em>Microland Limited, Bengaluru, IN </em></p>
+              <ul>
+                <li>Ownership and management of NetBackup backup infrastructure including installing NetBackup 7.x, troubleshooting Tape Library issues (Quantum i2000/6000) and Robotic Devices (TLD).</li>
+                <li>Configuring and managing the backups on Linux, Solaris, Windows and NDMP clients</li>
+                <li>Managed up to 3 projects or tasks at a given time while under pressure</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Associate Engineer</h4>
+              <h5>2008 - 2010</h5>
+              <p><em>Accenture Services Pvt. Limited, Bengaluru, IN </em></p>
+              <ul>
+                <li>Ownership and management of NetBackup backup infrastructure including installing NetBackup 7.x, Backup Exec troubleshooting Tape Library issues (Quantum i2000) and Robotic Devices (TLD).</li>
+                <li>Configuring and managing the backups on Linux, Solaris, Windows and NDMP clients</li>
+                </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Contractor (Accenture)</h4>
+              <h5>2007 - 2008</h5>
+              <p><em>Crux Services Pvt. Ltd, Bengaluru, IN </em></p>
+              <ul>
+                <li>Ownership and management of NetBackup backup infrastructure including installing NetBackup 7.x, Backup Exec troubleshooting Tape Library issues (Quantum i2000) and Robotic Devices (TLD).</li>
+                <li>Configuring and managing the backups on Linux, Solaris, Windows and NDMP clients</li>
+                </ul>
+            </div>
+          </div>
           </div>
         </div>
+      </div>
 
       </div>
     </section><!-- End Resume Section -->
