--- a/index.html
+++ b/index.html
@@ -308,53 +308,172 @@
       </div>
     </section><!-- End Resume Section -->
    
-   <!-- ======= Facts Section ======= -->
-   <section id="facts" class="facts">
-    <div class="container">
+   <!-- ======= Certifications Section ======= -->
+<div class="testimonials container">
 
-      <div class="section-title">
-        <h2>Facts</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-      </div>
+  <div class="section-title">
+    <h2>Certifications</h2>
+  </div>
 
-      <div class="row no-gutters">
+  <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+    <div class="swiper-wrapper">
 
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-          <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Happy Clients</strong> consequuntur quae</p>
-          </div>
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Azure Fundamentals exam is an opportunity to prove knowledge of cloud concepts, Azure services, Azure
+            workloads, security and privacy in Azure, as well as Azure pricing and support. Candidates should be
+            familiar with the general technology concepts, including concepts of networking, storage, compute,
+            application support, and application development.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/AZ-900.png" class="testimonial-img" alt="">
+          <h3>AZ-900</h3>
+          <h4>Microsoft Azure Cloud Fundamentals</h4>
         </div>
+      </div><!-- End testimonial item -->
 
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-          <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-          </div>
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Azure AI Fundamentals certification should have foundational knowledge of machine learning (ML) and
+            artificial intelligence (AI) concepts and related Microsoft Azure services.
+            This certification is an opportunity to demonstrate knowledge of common ML and AI workloads and how to
+            implement them on Azure.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/AI-900.png" class="testimonial-img" alt="">
+          <h3>AI-900</h3>
+          <h4>Microsoft Azure Artificial Intelligence Fundamentals</h4>
         </div>
+      </div><!-- End testimonial item -->
 
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-          <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-          </div>
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            The Microsoft Security, Compliance, and Identity Fundamentals certification (SC-900) is a great entry
+            point
+            to Microsoft security, compliance, and identity concepts.
+            It is essential to know how to keep information secure regardless of whether it’s on-premises or being
+            hosted on the cloud.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/SC-900.png" class="testimonial-img" alt="">
+          <h3>SC-900</h3>
+          <h4>Microsoft Security, Compliance, and Identity Fundamentals</h4>
         </div>
+      </div><!-- End testimonial item -->
 
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-          <div class="count-box">
-            <i class="bi bi-people"></i>
-            <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-          </div>
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            The Azure Administrator is the most popular Azure certification because it provides the broadest amount
+            of practical knowledge to manage Azure infrastructure. It also allows you to pivot into any career
+            pathfor Azure-based roles.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/AZ-104.png" class="testimonial-img" alt="">
+          <h3>AZ-104</h3>
+          <h4>Microsoft Azure Administrator Associate</h4>
         </div>
+      </div><!-- End testimonial item -->
 
-      </div>
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Azure Data Fundamentals can be used to prepare for other Azure role-based certifications like
+            Azure Database Administrator Associate or Azure Data Engineer Associate.
+            This certification gives good exposure to different database Technologies available in Microsoft Azure.
+            MS-SQL, No-SQL, analytical services and workloads, providing right solutions for different Database
+            workloads
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/DP-900.png" class="testimonial-img" alt="">
+          <h3>DP-900</h3>
+          <h4>Microsoft Azure Data Fundamentals</h4>
+        </div>
+      </div><!-- End testimonial item -->
+
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            The Microsoft Power Platform Fundamentals certification could be a great fit for you, if you’d like to:
+            Build solutions with Microsoft Power Platform.
+            Automate basic business processes with Power Automate.
+            Perform data analysis with Power BI.
+            Create simple Power Apps experiences.
+            Build practical chatbots with Power Virtual Agents.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/PL-900.png" class="testimonial-img" alt="">
+          <h3>PL-900</h3>
+          <h4>Microsoft Azure Power Platform Fundamentals</h4>
+        </div>
+      </div><!-- End testimonial item -->
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Zscaler Internet Access aka ZIA is set of different solutions provided by Zscaler this certifications
+            helps you
+            to manage and setup different tools with administrative best practices provided by Zscaler Cloud.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/ZIA-logo.png" class="testimonial-img" alt="">
+          <h3>ZIA - Administrator</h3>
+          <h4>Zscaler Internet Access - Administrator</h4>
+        </div>
+      </div><!-- End testimonial item -->
+
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Zscaler Private Access aka ZPA is solution provided by Zscaler for managing private application inside
+            organization.
+            This certifications helps you to manage and setup Zscaler tools with administrative best practices
+            provided by Zscaler Cloud.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/ZPA-logo.png" class="testimonial-img" alt="">
+          <h3>ZPA - Administrator</h3>
+          <h4>Zscaler Private Access - Administrator</h4>
+        </div>
+      </div><!-- End testimonial item -->
+
+      <div class="swiper-slide">
+        <div class="testimonial-item">
+          <p>
+            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+            Zscaler Digital Experience aka ZDX is set of different solutions provided by Zscaler to manage overall
+            application delivery for different
+            applications along with some end user analytics capabilities. This certifications helps you
+            to manage and setup different tools with administrative best practices provided by Zscaler Cloud.
+            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+          </p>
+          <img src="assets/img/testimonials/ZDX-logo.png" class="testimonial-img" alt="">
+          <h3>ZDX - Administrator</h3>
+          <h4>Zscaler Digital Experience - Administrator</h4>
+        </div>
+      </div><!-- End testimonial item -->
 
     </div>
-  </section><!-- End Facts Section -->
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <div class="owl-carousel testimonials-carousel">
+
+  </div>
+
+</div><!-- End Testimonials  -->
+
+</section><!-- End Facts Section -->
 
 
     <!-- ======= Testimonials Section ======= -->
