--- a/index.html
+++ b/index.html
@@ -322,15 +322,12 @@
         <div class="testimonial-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Azure Fundamentals exam is an opportunity to prove knowledge of cloud concepts, Azure services, Azure
-            workloads, security and privacy in Azure, as well as Azure pricing and support. Candidates should be
-            familiar with the general technology concepts, including concepts of networking, storage, compute,
-            application support, and application development.
+            ITIL V3 foundation exam is an opportunity to Understand ITIL Framework and Processes. The ITIL framework and processes were designed as a set of best practices for IT service management. It also give alignment with Global ITSM Standards.
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/AZ-900.png" class="testimonial-img" alt="">
+          <img src="assets/img/testimonials/ITIL V3.png" class="testimonial-img" alt="">
           <h3>AZ-900</h3>
-          <h4>Microsoft Azure Cloud Fundamentals</h4>
+          <h4>ITIL V3 foundation</h4>
         </div>
       </div><!-- End testimonial item -->
 
@@ -338,15 +335,12 @@
         <div class="testimonial-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Azure AI Fundamentals certification should have foundational knowledge of machine learning (ML) and
-            artificial intelligence (AI) concepts and related Microsoft Azure services.
-            This certification is an opportunity to demonstrate knowledge of common ML and AI workloads and how to
-            implement them on Azure.
+            NCDA exam is opportunity to prove skills in performing in-depth support, administrative functions, and performance management for NetApp data storage controllers running the ONTAP operating system in NFS and Windows (CIFS) multiprotocol environments.
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/AI-900.png" class="testimonial-img" alt="">
-          <h3>AI-900</h3>
-          <h4>Microsoft Azure Artificial Intelligence Fundamentals</h4>
+          <img src="assets/img/testimonials/NCDA.png" class="testimonial-img" alt="">
+          <h3>NS0-162</h3>
+          <h4>NetApp Certified Data Administrator, ONTAP</h4>
         </div>
       </div><!-- End testimonial item -->
 
