--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
           <img src="assets/img/testimonials/ITIL V3.png" class="testimonial-img" alt="">
-          <h3>AZ-900</h3>
+          <h3>ITIL</h3>
           <h4>ITIL V3 foundation</h4>
         </div>
       </div><!-- End testimonial item -->
@@ -348,116 +348,16 @@
         <div class="testimonial-item">
           <p>
             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            The Microsoft Security, Compliance, and Identity Fundamentals certification (SC-900) is a great entry
-            point
-            to Microsoft security, compliance, and identity concepts.
-            It is essential to know how to keep information secure regardless of whether it’s on-premises or being
-            hosted on the cloud.
+            Commvault Certified Professional certification validates the knowledge and skills in data protection, including backup and recovery, cloud, and infrastructure management, using Commvault software.
             <i class="bx bxs-quote-alt-right quote-icon-right"></i>
           </p>
-          <img src="assets/img/testimonials/SC-900.png" class="testimonial-img" alt="">
-          <h3>SC-900</h3>
-          <h4>Microsoft Security, Compliance, and Identity Fundamentals</h4>
+          <img src="assets/img/testimonials/commvault.png" class="testimonial-img" alt="">
+          <h3>Commvault</h3>
+          <h4>Commvault Certified Professional</h4>
         </div>
       </div><!-- End testimonial item -->
 
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            The Azure Administrator is the most popular Azure certification because it provides the broadest amount
-            of practical knowledge to manage Azure infrastructure. It also allows you to pivot into any career
-            pathfor Azure-based roles.
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/AZ-104.png" class="testimonial-img" alt="">
-          <h3>AZ-104</h3>
-          <h4>Microsoft Azure Administrator Associate</h4>
-        </div>
-      </div><!-- End testimonial item -->
-
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Azure Data Fundamentals can be used to prepare for other Azure role-based certifications like
-            Azure Database Administrator Associate or Azure Data Engineer Associate.
-            This certification gives good exposure to different database Technologies available in Microsoft Azure.
-            MS-SQL, No-SQL, analytical services and workloads, providing right solutions for different Database
-            workloads
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/DP-900.png" class="testimonial-img" alt="">
-          <h3>DP-900</h3>
-          <h4>Microsoft Azure Data Fundamentals</h4>
-        </div>
-      </div><!-- End testimonial item -->
-
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            The Microsoft Power Platform Fundamentals certification could be a great fit for you, if you’d like to:
-            Build solutions with Microsoft Power Platform.
-            Automate basic business processes with Power Automate.
-            Perform data analysis with Power BI.
-            Create simple Power Apps experiences.
-            Build practical chatbots with Power Virtual Agents.
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/PL-900.png" class="testimonial-img" alt="">
-          <h3>PL-900</h3>
-          <h4>Microsoft Azure Power Platform Fundamentals</h4>
-        </div>
-      </div><!-- End testimonial item -->
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Zscaler Internet Access aka ZIA is set of different solutions provided by Zscaler this certifications
-            helps you
-            to manage and setup different tools with administrative best practices provided by Zscaler Cloud.
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/ZIA-logo.png" class="testimonial-img" alt="">
-          <h3>ZIA - Administrator</h3>
-          <h4>Zscaler Internet Access - Administrator</h4>
-        </div>
-      </div><!-- End testimonial item -->
-
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Zscaler Private Access aka ZPA is solution provided by Zscaler for managing private application inside
-            organization.
-            This certifications helps you to manage and setup Zscaler tools with administrative best practices
-            provided by Zscaler Cloud.
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/ZPA-logo.png" class="testimonial-img" alt="">
-          <h3>ZPA - Administrator</h3>
-          <h4>Zscaler Private Access - Administrator</h4>
-        </div>
-      </div><!-- End testimonial item -->
-
-      <div class="swiper-slide">
-        <div class="testimonial-item">
-          <p>
-            <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-            Zscaler Digital Experience aka ZDX is set of different solutions provided by Zscaler to manage overall
-            application delivery for different
-            applications along with some end user analytics capabilities. This certifications helps you
-            to manage and setup different tools with administrative best practices provided by Zscaler Cloud.
-            <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-          </p>
-          <img src="assets/img/testimonials/ZDX-logo.png" class="testimonial-img" alt="">
-          <h3>ZDX - Administrator</h3>
-          <h4>Zscaler Digital Experience - Administrator</h4>
-        </div>
-      </div><!-- End testimonial item -->
-
-    </div>
+      </div>
     <div class="swiper-pagination"></div>
   </div>
 
@@ -591,7 +491,7 @@ Never thinks to downplay, always identifies a best out of team member and provid
                 <p>+91 998 601 8684</p>
               </div>
 
-              <iframe src="https://goo.gl/maps/vwZQifKEyRq2wJQG9" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              
             </div>
 
           </div>
