--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 June</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>Prasannaashwath.space</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 998 601 8684</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 99x xxx xx84</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bengaluru, India</span></li>
                 </ul>
               </div>
@@ -489,13 +489,13 @@ Never thinks to downplay, always identifies a best out of team member and provid
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>prasanna.ashwath@gmail.com</p>
+                <p>prasanna.xxxxxxx@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 998 601 8684</p>
+                <p>+91 998 xxx xx84</p>
               </div>
 
               
