--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>39</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma in Electronics & Communications</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>prasanna.ashwath@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>prasanna.xxxxxxx@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -237,8 +237,8 @@
               <p><em>An accomplishment-driven professional with an experience of nearly 16 years in the IT Industry; hands-on experience in performing techno-functional roles in complex and large setups as well as in managing & supporting clients in IT, Consulting, Real Estate and Financial Domain.</em></p>
               <ul>
                 <li>Bengaluru,India</li>
-                <li>+91 998 601 8684</li>
-                <li>prasanna.ashwath@gmail.com</li>
+                <li>+91 99x xxx xx84</li>
+                <li>prasanna.xxxxxxx@gmail.com</li>
               </ul>
             </div>
           </div class="column">
